<resources>
    <string name="app_name">BuyChat</string>
    <string name="next">NEXT</string>
    <string name="continue_button">CONTINUE</string>
    <string name="get_started">Get started by entering your \n Phone &amp; Email below</string>
    <string name="own_business">Own a Business?</string>
    <string name="click_here">Click here to create your online store</string>
    <string name="usage">Usage of the application implies that you understand  &amp; agree to our <a href="http://somesite.com/">Terms &amp; conditions</a> &amp; <a href="http://somesite.com/">privacy policy. </a></string>
    <string name="phone">Phone Number</string>
    <string name="email">xxx@xxx.com</string>
    <string name="dummy_code">+234</string>
    <string name="verification">Verification</string>
    <string name="pickalocation">Pick a location</string>
    <string name="verify">VERIFY</string>
    <string name="verify_number">Verify Number</string>
    <string name="four_digit">Make sure its you, Please enter the 4 digit code \n we sent in a text message</string>
    <string name="didnotget">Didn\'t get sms? Please try again</string>
    <string name="x">X</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_profile_actvity">ProfileActvity</string>
    <string name="title_activity_category_detail">CategoryDetailActivity</string>
    <string name="type_your_message">Type a message</string>
    <string name="title_activity_category_list">CategoryListActivity</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="title_delivery_address_list">DeliveryAddressListActivity</string>
    <string name="square_blue_name">square_blue</string>
    <string name="currency_symbol">₦</string>
    <string name="title_activity_chat_main">ChatMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</string>
    <string name="youtube_api">AIzaSyD4mBGtp7AwZ2tBuXnWon4ZqEJgzYbr6u4</string>
    <string name="error_string">There was an error initializing the YouTube Player</string>
    <string name="write_label">Discover and BuyOverChat from retailers in your City.</string>





</resources>
