<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clickable="true"
    android:background="@color/white"
    android:id="@+id/register_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/square_blue_name"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <com.buychat.utils.fonts.TextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:text="@string/verification"
            android:gravity="center"
            android:id="@+id/verification_text"
            android:textColor="@color/white"
            />

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@color/colorPrimary"
            android:layout_weight="0.6"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.buychat.utils.fonts.TextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/get_started"
                android:gravity="center"
                android:textColor="@color/white"
                />

        </RelativeLayout>



        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="2.3"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_weight="0.9"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <LinearLayout
                        android:background="@drawable/border"
                        android:orientation="horizontal"
                android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countrycode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:contentColor="@android:color/white"
                    android:layout_gravity="center"
                    android:paddingTop="3dp"
                    app:defaultNameCode="NG"
                    android:paddingBottom="3dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"/>

                        <com.buychat.utils.fonts.TextViewBold
                            android:layout_gravity="center"
                            android:text="+234"
                            android:textColor="@color/white"
                            android:padding="10dp"
                            android:background="@drawable/button_selector_green"
                            android:autoLink="web"
                            android:visibility="gone"
                            android:gravity="center"
                            android:layout_weight="0.2"
                            android:layout_width="0dp"

                            android:layout_height="wrap_content" />
                        <com.buychat.utils.fonts.EditTextRegular
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:inputType="number"
                            android:padding="11dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/phone_number"
                            android:hint="@string/phone"
                            android:imeOptions="actionNext"
                            android:background="@null"
                            />

                    </LinearLayout>


            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content">


                <com.buychat.utils.fonts.TextViewBold
                    android:layout_gravity="center"
                    android:text="+234"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:background="@drawable/button_selector_green"
                    android:autoLink="web"
                    android:gravity="center"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <com.buychat.utils.fonts.EditTextRegular
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:padding="15dp"

                    android:imeOptions="actionDone"
                    android:gravity="center"
                    android:background="@null"
                    />

            </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_weight="1.1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <com.buychat.utils.fonts.TextViewBold
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/own_business"
                android:autoLink="web"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>



            <com.buychat.utils.fonts.ButtonRegular
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/border_green"
                android:text="@string/click_here"
                android:textColor="@color/green"
                android:textAllCaps="false"
                android:id="@+id/create"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                />



                <com.buychat.utils.fonts.TextViewRegular
                    android:id="@+id/privacyText"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:text="@string/usage"
                    android:gravity="center"
                    android:autoLink="all"
                    android:clickable="true"
                    android:linksClickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


    </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <com.buychat.utils.fonts.ButtonMedium
            android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_selector_green"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />


</RelativeLayout>