<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clickable="true"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/verify_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/square_blue_name"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">



        <com.buychat.utils.fonts.TextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:text="@string/verify_number"
            android:gravity="center"
            android:textColor="@color/white"
            />

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@color/colorPrimary"
            android:layout_weight="0.6"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.buychat.utils.fonts.TextViewBold
                android:padding="10dp"
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center"
                android:textColor="@color/white"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="2.3"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <com.buychat.utils.fonts.TextViewRegular
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:text="@string/four_digit"
                    android:autoLink="web"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:weightSum="1.2"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">



                    <!--<com.buychat.utils.fonts.EditTextRegular-->
                        <!--android:singleLine="true"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="0.3"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:id="@+id/number1"-->
                        <!--android:hint="@string/x"-->
                        <!--android:padding="10dp"-->
                        <!--android:inputType="number"-->
                        <!--android:imeOptions="actionDone"-->
                        <!--android:gravity="center"-->
                        <!--android:background="@drawable/border"-->
                        <!--/>-->
                    <!--<com.buychat.utils.fonts.EditTextRegular-->
                        <!--android:singleLine="true"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="0.3"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:id="@+id/number2"-->
                        <!--android:hint="@string/x"-->

                        <!--android:inputType="number"-->
                        <!--android:padding="10dp"-->
                        <!--android:imeOptions="actionDone"-->
                        <!--android:gravity="center"-->
                        <!--android:background="@drawable/border"-->
                        <!--/>-->
                    <!--<com.buychat.utils.fonts.EditTextRegular-->
                        <!--android:singleLine="true"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="0.3"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:id="@+id/number3"-->
                        <!--android:hint="@string/x"-->

                        <!--android:inputType="number"-->
                        <!--android:padding="10dp"-->
                        <!--android:imeOptions="actionDone"-->
                        <!--android:gravity="center"-->
                        <!--android:background="@drawable/border"-->
                        <!--/>-->
                    <!--<com.buychat.utils.fonts.EditTextRegular-->
                        <!--android:singleLine="true"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="0.3"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:id="@+id/number4"-->
                        <!--android:hint="@string/x"-->

                        <!--android:inputType="number"-->
                        <!--android:padding="10dp"-->
                        <!--android:imeOptions="actionDone"-->
                        <!--android:gravity="center"-->
                        <!--android:background="@drawable/border"-->
                        <!--/>-->

                    <com.buychat.utils.OtpView
                        android:id="@+id/otp_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="#000000"
                        app:text_background_color="@color/white"
                        >
                        <requestFocus/>
                    </com.buychat.utils.OtpView>

                </LinearLayout>


            </LinearLayout>



            <LinearLayout
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">



                <com.buychat.utils.fonts.ButtonRegular
                    android:id="@+id/sendAgain"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/border_green"
                    android:text="@string/didnotget"
                    android:textColor="@color/green"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />



                <com.buychat.utils.fonts.TextViewRegular
                    android:id="@+id/privacyText"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:text="@string/usage"
                    android:autoLink="web"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <com.buychat.utils.fonts.ButtonMedium
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_selector_green"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />


</RelativeLayout>